# trend-guard

./: .env.example  .gitignore  CLAUDE.md  README.md  STRUCTURE.md  TEST_RUN.md  pyproject.toml  test_db_updates.py  test_symbols.py
config/: config.json
docs/: DATABASE.md  DATA_CACHING_PROPOSAL.md  ENTRY_CANDIDATES_VS_ENTER.md  MIGRATION_ANALYSIS.md  ML_BACKFILL_REVAMP.md  REPORT_QUESTIONS.md  SCANNER_WALKTHROUGH.md  SCHEDULING.md  SCHEDULING_V2.3.md  TRADING_LOGIC_V2.3.md  TROUBLESHOOTING.md
scripts/: backfill_signals.py  com.trendguard.daily.plist  fetch_history.py  init_db.py  move_project.sh  provider_stooq.py  provider_yfinance.py  setup_schedule.sh  trendguard_daily.sh  view_logs.sh
src/: data_backend.py  data_cache.py  init_db.py  notify.py  provider_yfinance.py  report.py  scanner.py
src/ai/: __init__.py  sentinel.py
src/analysis/: __init__.py  features.py  indicators.py  signals.py
src/backends/: sqlite_cache.py
src/ml/: README.md  __init__.py  backfill.py  labels.py  schema.py
src/portfolio/: __init__.py  holdings.py  position_management.py
src/utils/: earnings.py  universe.py  utils.py
