[project]
name = "trend-guard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "robin-stocks>=3.4.0",
    "yfinance>=1.0",
    "python-dotenv>=1.0.0",
    "plotly>=6.5.0",
]
